--- a/style.css
+++ b/style.css
@@ -1,4 +1,109 @@
+/* body css */
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body {
     /* margin: 0 auto; */
     font-family: 'Poppins', sans-serif;
 }
+button{
+    border: none;
+    padding: 10px 30px;
+    background-color: brown;
+    border-radius: 25px;
+    color: #ffff;
+    font-weight: 700;
+    transition: 1s;
+}
+button:hover {
+    background-color: black;
+    color: wheat;
+    box-shadow: 0 0 10px brown;
+}
+
+/* header css star  */
+header {
+    max-width: 100%;
+    margin: 0%;
+}
+.head-sec {
+    margin: 40px 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.menu-title {
+    margin-left: 60px;
+  
+}
+.nav-menu {
+    display: flex;
+}
+.nav-menu li {
+    text-decoration: none;
+    list-style-type: none;
+    margin: 0;
+}
+.nav-menu li a {
+    text-decoration: none;
+    color: black;
+    font-size: 16px;
+    font-weight: 700;
+    padding: 15px 15px;
+    transition: 1s;
+}
+.nav-menu li a:hover {
+    background-color: black;
+    color: blanchedalmond;
+    border-radius: 5px;
+}
+
+.header-details {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 60px;
+    align-items: center;
+    justify-items: center;
+    margin: 0 60px;
+
+}
+.header-title {
+    font-size: 50px;
+    font-weight: 800;
+    opacity: .9; 
+    margin-bottom: 10px;
+}
+
+.header-text {
+    margin-top: 10px;
+    font-weight: 700;
+    margin: 20px 0; }
+/* animations header  */
+
+.animation-1  {
+    display: inline-block;
+    transition: transform 1s;
+}
+.header-details:hover .animation-1 {
+    transform: scale(1.07) rotateX(360deg);
+}
+.animation-2 {
+    display: inline-block;
+    transition: transform 1s; }
+
+.header-details:hover .animation-2 {
+        transform: scale(1.05) rotateX(-180deg);
+    }
+
+
+
+.header-img {
+    background-image: url(images/Circle\ design.svg);
+    width: 100%;
+    background-repeat: no-repeat;
+
+}
+
